Install a.vim(Alternate Files quickly(.c->.h ect) as a submodule.)

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "bundle/OmniCppComplete"]
 	path = bundle/OmniCppComplete
 	url = https://github.com/vim-scripts/OmniCppComplete.git
+[submodule "bundle/AlternateFiles"]
+	path = bundle/AlternateFiles
+	url = https://github.com/vim-scripts/a.vim.git
