--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "bundle/PyDiction"]
 	path = bundle/PyDiction
 	url = https://github.com/vim-scripts/Pydiction.git
+[submodule "bundle/Markdown"]
+	path = bundle/Markdown
+	url = https://github.com/hallison/vim-markdown.git
