--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/Markdown"]
 	path = bundle/Markdown
 	url = https://github.com/hallison/vim-markdown.git
+[submodule "bundle/SnipMate"]
+	path = bundle/SnipMate
+	url = https://github.com/msanders/snipmate.vim.git
