Add DrawIt plugin for draw in vim.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "bundle/SnipMate"]
 	path = bundle/SnipMate
 	url = git://github.com/msanders/snipmate.vim.git
+[submodule "bundle/DrawIt"]
+	path = bundle/DrawIt
+	url = git@github.com:vim-scripts/DrawIt.git
