Install perforce.vim plugin.

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "bundle/DrawIt"]
 	path = bundle/DrawIt
 	url = git://github.com/vim-scripts/DrawIt.git
+[submodule "bundle/Perforce"]
+	path = bundle/Perforce
+	url = git://github.com/vim-scripts/perforce.vim.git
