--- a/.gitmodules
+++ b/.gitmodules
@@ -51,7 +51,7 @@
 	url = git@github.com:vim-scripts/DoxygenToolkit.vim.git
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
-	url = git@github.com/scrooloose/syntastic.git
+	url = git@github.com:scrooloose/syntastic.git
 [submodule "bundle/auto-pairs"]
 	path = bundle/auto-pairs
 	url = git@github.com:jiangmiao/auto-pairs.git
