--- a/.gitmodules
+++ b/.gitmodules
@@ -1,45 +1,45 @@
 [submodule "bundle/vim-pathogen"]
 	path = bundle/vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
+	url = https://github.com/tpope/vim-pathogen.git
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
-	url = git://github.com/tpope/vim-fugitive.git
+	url = https://github.com/tpope/vim-fugitive.git
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
+	url = https://github.com/scrooloose/nerdtree.git
 [submodule "bundle/taglist"]
 	path = bundle/taglist
-	url = git://github.com/vim-scripts/taglist.vim.git
+	url = https://github.com/vim-scripts/taglist.vim.git
 [submodule "bundle/winmananger"]
 	path = bundle/winmananger
 	url = https://github.com/vim-scripts/winmanager.git
 [submodule "bundle/OmniCppComplete"]
 	path = bundle/OmniCppComplete
-	url = git://github.com/vim-scripts/OmniCppComplete.git
+	url = https://github.com/vim-scripts/OmniCppComplete.git
 [submodule "bundle/AlternateFiles"]
 	path = bundle/AlternateFiles
-	url = git://github.com/vim-scripts/a.vim.git
+	url = https://github.com/vim-scripts/a.vim.git
 [submodule "bundle/ConqueTerm"]
 	path = bundle/ConqueTerm
-	url = git://github.com/pthrasher/conqueterm-vim.git
+	url = https://github.com/pthrasher/conqueterm-vim.git
 [submodule "bundle/PyDiction"]
 	path = bundle/PyDiction
-	url = git://github.com/vim-scripts/Pydiction.git
+	url = https://github.com/vim-scripts/Pydiction.git
 [submodule "bundle/Markdown"]
 	path = bundle/Markdown
-	url = git://github.com/hallison/vim-markdown.git
+	url = https://github.com/hallison/vim-markdown.git
 [submodule "bundle/SnipMate"]
 	path = bundle/SnipMate
-	url = git://github.com/msanders/snipmate.vim.git
+	url = https://github.com/msanders/snipmate.vim.git
 [submodule "bundle/DrawIt"]
 	path = bundle/DrawIt
-	url = git://github.com/vim-scripts/DrawIt.git
+	url = https://github.com/vim-scripts/DrawIt.git
 [submodule "bundle/EasyMotion"]
 	path = bundle/EasyMotion
-	url = git://github.com/Lokaltog/vim-easymotion.git
+	url = https://github.com/Lokaltog/vim-easymotion.git
 [submodule "bundle/Ctrlp"]
 	path = bundle/Ctrlp
-	url = git://github.com/kien/ctrlp.vim.git
+	url = https://github.com/kien/ctrlp.vim.git
 [submodule "bundle/Cscope"]
 	path = bundle/Cscope
 	url = https://github.com/vim-scripts/cscope.vim.git
